<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.gmoon</groupId>
    <artifactId>toy</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>toy</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <spring-boot.version>3.3.0</spring-boot.version>

        <mysql-connector-java.version>8.0.28</mysql-connector-java.version>
        <h2.version>2.2.224</h2.version>
        <hibernate.version>6.5.2.Final</hibernate.version>
        <querydsl-core.version>5.0.0</querydsl-core.version>
    </properties>

    <modules>
        <module>google-spreadsheet</module>
        <module>java-core</module>
        <module>spring-batch</module>
        <module>spring-cache</module>
        <module>spring-data-r2dbc</module>
        <module>spring-event</module>
        <module>spring-integration</module>
        <module>spring-jooq</module>
        <module>spring-jpa</module>
        <module>spring-lock</module>
        <module>spring-mvc</module>
        <module>spring-properties</module>
        <module>spring-reactive</module>
        <module>spring-security</module>
        <module>spring-triangle</module>
        <module>spring-tx</module>
        <module>spring-utils</module>
        <module>testing</module>
    </modules>
</project>
